--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dev": "nodemon  --exec ts-node ./src/infrastructure/api/server.ts"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
+    "@types/umzug": "^2.3.9",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -30,6 +32,7 @@
     "sequelize": "^6.37.4",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.7",
+    "umzug": "^3.8.2",
     "uuid": "^10.0.0",
     "yup": "^1.4.0"
   }
